# protein-metamorphisms-is

./: .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yml  Dockerfile  README.md  docker-compose.yml  extract_id_from_fasta.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish-pypy.yml  test-coverage.yml  test-doc.yml  test-lint.yml
binaries/: USalign  USalign.cpp  USalign_compile.txt
data/: fastas.fasta  goa_ids.csv  merge_sf.py  metamorphic.regions.checked.ago.2024.csv  sample_accessions.csv  semantic.py  test.csv  uniprot_full.csv  uniprot_ids.csv
docs/: requirements.txt
docs/source/: alignment.rst  cdhit.rst  cealign.rst  conf.py  database.rst  fasta.rst  index.rst  lookup_table_generation.rst  model.rst  parser.rst  pdb.rst  template.rst  uniprot.rst  yaml.rst
docs/source/deployment/: setup_instructions.rst
docs/source/information_system/: pdb.rst  uniprot.rst
docs/source/operation/: cdhit.rst  sequence_clustering.rst  structural_alignment.rst
docs/source/pipelines/: fantasia.rst
docs/source/run/fantasia/: run.rst
docs/source/tasks/: base.rst  base_api.rst  gpu.rst  gpu_api.rst  queue.rst  queue_api.rst
examples/: fast_checks.py
examples/example_alignment/: main.py
examples/example_chain/: config.yaml  main.py
examples/example_fasta/: config.yaml  main.py
examples/example_pdb/: config.yaml  main.py
examples/example_structural_alignment/: config.yaml  main.py
examples/example_uniprot/: config.yaml  main.py
obsolete/: dfs.py
protein_data_handler/: alignment.py  chain.py  checks.py  config.yaml  fasta.py  main.py  pdb.py  structural_alignment.py  uniprot.py
protein_data_handler/config/: config.yaml  constants.yaml
protein_data_handler/helpers/logger/: logger.py
protein_data_handler/helpers/parser/: parser.py
protein_data_handler/information_system/: pdb.py  uniprot.py
protein_data_handler/information_system/base/: bioinfo_extractor.py  extractor.py
protein_data_handler/models/: uniprot.py
protein_data_handler/operations/: cdhit.py  cealign.py  structural_alignment.py  tmalign.py
protein_data_handler/operations/base/: bioinfo_operator.py  operator.py
protein_data_handler/operations/structural_alignment_tasks/: combinatorial_extension.py  fatcat.py  universal.py
protein_data_handler/sql/: constants.py  model.py
protein_data_handler/sql/base/: database_manager.py
protein_information_system/: main.py
protein_information_system/config/: config.yaml  constants.yaml
protein_information_system/helpers/config/: yaml.py
protein_information_system/helpers/logger/: logger.py
protein_information_system/helpers/parser/: parser.py
protein_information_system/helpers/services/: services.py
protein_information_system/operation/embedding/: sequence_embedding.py  structure_3di.py
protein_information_system/operation/extraction/: accessions.py  pdb.py  protein_annotations_file.py  uniprot.py
protein_information_system/sql/: constants.py
protein_information_system/sql/base/: database_manager.py
protein_information_system/tasks/: base.py  gpu.py  queue.py
protein_metamorphisms_is/: main.py
protein_metamorphisms_is/base/: base.py  gpu.py  pipeline.py  queue.py  task.py
protein_metamorphisms_is/config/: config.yaml  constants.yaml
protein_metamorphisms_is/information_system/: accessions.py  pdb.py  uniprot.py
protein_metamorphisms_is/operation/: cuda.py  go_metrics.py  go_prediction.py  optics.py  protein_go_prediction_metrics.py  structural_alignment.py
protein_metamorphisms_is/operations/: cdhit.py  embeddings.py  go_metrics.py  go_prediction.py  optics.py  protein_go_prediction_metrics.py  seq_embeddings.py  sequence_embeddings.py  structural_alignment.py  structure_embeddings.py
protein_metamorphisms_is/sql/: constants.py  generate_schema.py  goa_trees.py  model.py
protein_metamorphisms_is/tasks/: base.py  gpu.py  queue.py
tests/: test_alignment.py  test_database.py  test_fasta.py  test_parser.py  test_pdb.py  test_template.py  test_uniprot.py  test_yaml.py
tests/clustering/: test_sequence_clustering.py  test_structural_subclustering.py
tests/config/: config.yaml  constants.yaml
tests/embedding/: test_embedding.py  test_structure_3di.py
tests/extraction/: test_accession.py  test_pdb.py  test_uniprot.py
tests/helpers/: test_parser.py  test_yaml.py
tests/information_system/: test_accession.py  test_pdb.py  test_uniprot.py
tests/multifunctionality/: test_go_multifunctionality_metrics.py  test_sequence_go_annotation.py
tests/operations/: test_cdhit.py  test_structural_alignment.py
tests/sql/: test_constants.py
tests/structural_alignment/: test_structural_alignment.py
(+108 files in other folders)
